changing the readme file

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,7 @@
-== README
+== Coronellw
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
+This proyect was created only with the purpose to show some of my work, it is basically a portfolio of things I can do.
 
 * Ruby version
+2.0.0
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
